@@ -40,6 +40,8 @@ Tous les paramètres sont de la forme suivante : nom=valeur
 ||bandwidth                      ||la largeur de bande, valeurs possibles : 8MHz,7MHz,6MHz,auto ||
 ||guardinterval                  ||l'intervalle de garde, valeurs possibles : 1/32,1/16,1/8,1/4,auto ||
 ||coderate                       ||le taux de code, valeurs possibles : none,1/2,2/3,3/4,4/5,5/6,6/7,7/8,8/9,auto ||
+|| Pour l'ATSC                   ||
+||atsc_modulation                ||la modulation pour les cartes atsc. valeurs possible : vsb8, vsb16, qam256, qam64, qamauto ||
 ||'''Pour chaque chaîne ''' (ordrerequisé : ip, ..., pids) ||
 ||ip                             ||l'ip de multicast sur laquelle cette chaise sera diffusée ||
 ||port                           ||le port ||
